# a2z-expression

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md
.github/workflows/: manuscript.yaml
data/: samples.tsv
docs/manuscript/: .gitignore  README.md  main.typ  pixi.toml
docs/manuscript/content/: 00-abstract.typ  01-introduction.typ  02-results.typ  03-discussion.typ  04-methods.typ  05-acknowledgements.typ  90-references.typ  91-supplemental.typ  references.bib  references.yml
results/00_preprocessing/: README.md  create_proteome.py  gff2bed.py  pipeline2dataset.ipynb  pipeline2dataset.py  pixi.toml  populate_utr_intron.py  tx2gene.py
results/01_model/: README.md  pixi.toml  run_predictions.ipynb  run_predictions.py  train.ipynb  train.py
results/01_model/SLURM/: predict_all_atlas.sh  train_all_atlas.py
results/01_model/config/: config.yaml
results/01_model/config/data/: base.yaml  onehot.yaml  tokens.yaml
results/01_model/config/model/: DanQ.yaml  FNetCompression.yaml  HyenaDNA-small.yaml  HyenaDNA-tiny.yaml  HyenaDNA.yaml  Miniformer.yaml
results/01_model/config/training/: HyenaDNA.yaml  base.yaml  default.yaml
results/02_interpretation/: README.md  plot_interpretation.ipynb  plot_performance.ipynb  prepare_ablation.ipynb
src/bash/: download.sh  header.sh
src/python/a2ze/: README.md  pyproject.toml
src/python/a2ze/src/a2ze/: utils.py
src/python/a2ze/src/a2ze/data/: __init__.py  lightning.py  transforms.py
src/python/a2ze/src/a2ze/models/: __init__.py  danq.py  fnet.py  hyena.py  lightning.py  miniformer.py
(+19 files in other folders)
